CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
SET_PROPERTY(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "CMake Targets")

PROJECT(GeoPortal)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")

INCLUDE(cotire)
INCLUDE(MacroUtils)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

#######################################################################

SET(GEOPORTAL_MAJOR_VERSION 0 CACHE STRING "Major version")
SET(GEOPORTAL_MINOR_VERSION 1 CACHE STRING "Minor version")
SET(GEOPORTAL_PATCH_VERSION 0 CACHE STRING "Patch version")

#######################################################################

SET(Boost_USE_MULTITHREADED ON)
SET(Boost_USE_STATIC_LIBS OFF)
ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)
FIND_PACKAGE(Boost 1.55.0 COMPONENTS filesystem log log_setup locale regex date_time system thread chrono REQUIRED)	

#FIND_PACKAGE(GDAL)

FIND_PACKAGE(Qt5Core QUIET)
FIND_PACKAGE(Qt5Widgets QUIET)
FIND_PACKAGE(Qt5Gui QUIET)
FIND_PACKAGE(Qt5OpenGL QUIET)
FIND_PACKAGE(Qt5Sql QUIET)
FIND_PACKAGE(Qt5Xml QUIET)	
FIND_PACKAGE(Qt5LinguistTools QUIET)
SET(QT_INCLUDES ${Qt5Widgets_INCLUDE_DIRS} ${Qt5OpenGL_INCLUDE_DIRS} ${Qt5Sql_INCLUDE_DIRS} ${Qt5Svg_INCLUDE_DIRS} ${Qt5Xml_INCLUDE_DIRS})

FIND_PACKAGE(PropertyBrowser)

FIND_PACKAGE(OSG REQUIRED)
FIND_PACKAGE(OsgEarth REQUIRED)

SET(CMAKE_INCLUDE_PATH CACHE STRING "Put your additional include dir here...")
SET(CMAKE_LIBRARY_PATH CACHE STRING "Put your additional lib dir here...")

SET(CMAKE_DEBUG_POSTFIX "d")

INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}/include
	${CMAKE_INCLUDE_PATH}
)

LINK_DIRECTORIES(
	${CMAKE_LIBRARY_PATH}
)

ADD_SUBDIRECTORY(src/importHyperion)
ADD_SUBDIRECTORY(src/geoPortal)
