SET(APP_NAME ImportHyperionOverviews)

SET(HEADER_FILES
	Downloader.hpp
)

SET(SRC_FILES	
	Downloader.cpp
	Program.cpp
)

INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}/include
	${CMAKE_INCLUDE_PATH}	
	${GDAL_INCLUDE_DIR}
	${Boost_INCLUDE_DIRS}
	${QT_INCLUDES}
)

ADD_EXECUTABLE(${APP_NAME} ${SRC_FILES} ${HEADER_FILES})

IF(Qt5Widgets_FOUND)
    QT5_USE_MODULES(${APP_NAME} Gui Widgets OpenGL Sql Xml Network)
ENDIF(Qt5Widgets_FOUND)

INSTALL(TARGETS ${APP_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
